--- a/New folder/collections.html
+++ b/New folder/collections.html
@@ -49,7 +49,6 @@
                 <li><a href="collections.html" class="nav-link text-pink">Collections</a></li>
                 <li><a href="featured.html" class="nav-link hover:text-pink transition-colors">Featured</a></li>
                 <li><a href="our-story.html" class="nav-link hover:text-pink transition-colors">Our Story</a></li>
-                <li><a href="lookbook.html" class="nav-link hover:text-pink transition-colors">Lookbook</a></li>
                 <li><a href="contact.html" class="nav-link hover:text-pink transition-colors">Contact Us</a></li>
                 <li><a href="cart.html" class="nav-link hover:text-pink transition-colors">Cart</a></li>
             </ul>
@@ -73,40 +72,39 @@
             <a href="collections.html" class="py-3 border-b border-gray-light text-pink">Collections</a>
             <a href="featured.html" class="py-3 border-b border-gray-light hover:text-pink transition-colors">Featured</a>
             <a href="our-story.html" class="py-3 border-b border-gray-light hover:text-pink transition-colors">Our Story</a>
-            <a href="lookbook.html" class="py-3 border-b border-gray-light hover:text-pink transition-colors">Lookbook</a>
             <a href="contact.html" class="py-3 border-b border-gray-light hover:text-pink transition-colors">Contact Us</a>
             <a href="cart.html" class="py-3 border-b border-gray-light hover:text-pink transition-colors">Cart</a>
         </nav>
     </div>
 
-    <main class="pt-20 sm:pt-24 pb-12 sm:pb-20 px-4 sm:px-6 min-h-screen">
-        <div class="max-w-6xl mx-auto">
+    <main class="pt-20 sm:pt-24 pb-12 sm:pb-20 px-4 sm:px-6 min-h-screen w-full overflow-x-hidden">
+        <div class="max-w-6xl mx-auto w-full">
             <h1 class="font-serif text-3xl sm:text-4xl md:text-5xl font-light text-gray-dark mb-6 sm:mb-10">Collections</h1>
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-5 sm:gap-8">
-                <a href="product-details.html" class="group block rounded-2xl overflow-hidden bg-white border border-gray-light shadow-sm card-hover card-shine">
-                    <div class="aspect-[3/4] overflow-hidden bg-gray-light">
-                        <img src="https://images.unsplash.com/photo-1594552072238-fb33e84ebf63?w=600&q=85" alt="Bridal collection" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-700" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI2MDAiIGhlaWdodD0iODAwIj48cmVjdCBmaWxsPSIjZjBmMGYwIiB3aWR0aD0iNjAwIiBoZWlnaHQ9IjgwMCIvPjwvc3ZnPg=='">
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6 lg:gap-8 w-full">
+                <a href="product-details.html" class="group block rounded-2xl overflow-hidden bg-white border border-gray-light shadow-sm card-hover card-shine min-w-0 w-full">
+                    <div class="aspect-[3/4] overflow-hidden bg-gray-light w-full">
+                        <img src="https://images.unsplash.com/photo-1594552072238-fb33e84ebf63?w=600&q=85" alt="Bridal collection" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-700 max-w-full" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI2MDAiIGhlaWdodD0iODAwIj48cmVjdCBmaWxsPSIjZjBmMGYwIiB3aWR0aD0iNjAwIiBoZWlnaHQ9IjgwMCIvPjwvc3ZnPg=='">
                     </div>
-                    <div class="p-5">
-                        <h2 class="font-serif text-xl text-gray-dark">Bridal</h2>
+                    <div class="p-4 sm:p-5">
+                        <h2 class="font-serif text-lg sm:text-xl text-gray-dark">Bridal</h2>
                         <p class="text-pink text-sm transition-transform duration-300 group-hover:translate-x-1 inline-block">View details →</p>
                     </div>
                 </a>
-                <a href="product-details.html" class="group block rounded-2xl overflow-hidden bg-white border border-gray-light shadow-sm card-hover card-shine">
-                    <div class="aspect-[3/4] overflow-hidden bg-gray-light">
-                        <img src="https://images.unsplash.com/photo-1566174053879-31525623c5d6?w=600&q=85" alt="Evening gowns" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-700" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI2MDAiIGhlaWdodD0iODAwIj48cmVjdCBmaWxsPSIjZjBmMGYwIiB3aWR0aD0iNjAwIiBoZWlnaHQ9IjgwMCIvPjwvc3ZnPg=='">
+                <a href="product-details.html" class="group block rounded-2xl overflow-hidden bg-white border border-gray-light shadow-sm card-hover card-shine min-w-0 w-full">
+                    <div class="aspect-[3/4] overflow-hidden bg-gray-light w-full">
+                        <img src="https://images.unsplash.com/photo-1566174053879-31525623c5d6?w=600&q=85" alt="Evening gowns" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-700 max-w-full" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI2MDAiIGhlaWdodD0iODAwIj48cmVjdCBmaWxsPSIjZjBmMGYwIiB3aWR0aD0iNjAwIiBoZWlnaHQ9IjgwMCIvPjwvc3ZnPg=='">
                     </div>
-                    <div class="p-5">
-                        <h2 class="font-serif text-xl text-gray-dark">Evening Gowns</h2>
+                    <div class="p-4 sm:p-5">
+                        <h2 class="font-serif text-lg sm:text-xl text-gray-dark">Evening Gowns</h2>
                         <p class="text-pink text-sm transition-transform duration-300 group-hover:translate-x-1 inline-block">View details →</p>
                     </div>
                 </a>
-                <a href="product-details.html" class="group block rounded-2xl overflow-hidden bg-white border border-gray-light shadow-sm card-hover card-shine">
-                    <div class="aspect-[3/4] overflow-hidden bg-gray-light">
-                        <img src="https://images.unsplash.com/photo-1535632066927-ab7c9ab60908?w=600&q=85" alt="Fancy articles" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-700" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI2MDAiIGhlaWdodD0iODAwIj48cmVjdCBmaWxsPSIjZjBmMGYwIiB3aWR0aD0iNjAwIiBoZWlnaHQ9IjgwMCIvPjwvc3ZnPg=='">
+                <a href="product-details.html" class="group block rounded-2xl overflow-hidden bg-white border border-gray-light shadow-sm card-hover card-shine min-w-0 w-full">
+                    <div class="aspect-[3/4] overflow-hidden bg-gray-light w-full">
+                        <img src="https://images.unsplash.com/photo-1535632066927-ab7c9ab60908?w=600&q=85" alt="Fancy articles" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-700 max-w-full" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI2MDAiIGhlaWdodD0iODAwIj48cmVjdCBmaWxsPSIjZjBmMGYwIiB3aWR0aD0iNjAwIiBoZWlnaHQ9IjgwMCIvPjwvc3ZnPg=='">
                     </div>
-                    <div class="p-5">
-                        <h2 class="font-serif text-xl text-gray-dark">Fancy Articles</h2>
+                    <div class="p-4 sm:p-5">
+                        <h2 class="font-serif text-lg sm:text-xl text-gray-dark">Fancy Articles</h2>
                         <p class="text-pink text-sm transition-transform duration-300 group-hover:translate-x-1 inline-block">View details →</p>
                     </div>
                 </a>
