--- a/New folder/our-story.html
+++ b/New folder/our-story.html
@@ -29,6 +29,8 @@
         .mobile-menu { transition: transform 0.3s ease, opacity 0.3s ease; }
         .mobile-menu:not(.open) { transform: translateX(100%); opacity: 0; pointer-events: none; }
         .mobile-menu.open { transform: translateX(0); opacity: 1; pointer-events: auto; }
+        .timeline-line { left: 1rem; top: 0; bottom: 0; width: 2px; }
+        @media (min-width: 768px) { .timeline-line { left: 50%; transform: translateX(-1px); } }
     </style>
 </head>
 <body class="bg-gray-soft text-gray-dark font-sans antialiased">
@@ -44,7 +46,6 @@
                 <li><a href="collections.html" class="nav-link hover:text-pink transition-colors">Collections</a></li>
                 <li><a href="featured.html" class="nav-link hover:text-pink transition-colors">Featured</a></li>
                 <li><a href="our-story.html" class="nav-link text-pink">Our Story</a></li>
-                <li><a href="lookbook.html" class="nav-link hover:text-pink transition-colors">Lookbook</a></li>
                 <li><a href="contact.html" class="nav-link hover:text-pink transition-colors">Contact Us</a></li>
                 <li><a href="cart.html" class="nav-link hover:text-pink transition-colors">Cart</a></li>
             </ul>
@@ -68,7 +69,6 @@
             <a href="collections.html" class="py-3 border-b border-gray-light hover:text-pink transition-colors">Collections</a>
             <a href="featured.html" class="py-3 border-b border-gray-light hover:text-pink transition-colors">Featured</a>
             <a href="our-story.html" class="py-3 border-b border-gray-light text-pink">Our Story</a>
-            <a href="lookbook.html" class="py-3 border-b border-gray-light hover:text-pink transition-colors">Lookbook</a>
             <a href="contact.html" class="py-3 border-b border-gray-light hover:text-pink transition-colors">Contact Us</a>
             <a href="cart.html" class="py-3 border-b border-gray-light hover:text-pink transition-colors">Cart</a>
         </nav>
@@ -89,11 +89,58 @@
                     </p>
                 </div>
             </div>
+
+            <h2 class="font-serif text-2xl sm:text-3xl font-light text-gray-dark mt-16 sm:mt-20 mb-8 sm:mb-10 text-center">Our Journey</h2>
+            <div class="relative max-w-3xl mx-auto">
+                <div class="timeline-line absolute bg-pink/30 rounded-full"></div>
+                <ul class="relative space-y-8 sm:space-y-10">
+                    <li class="relative flex flex-col md:flex-row md:items-center gap-4 md:gap-8 pl-8 md:pl-0">
+                        <div class="md:w-1/2 md:pr-12 md:text-right">
+                            <span class="font-serif text-xl text-pink">2010</span>
+                            <p class="text-gray-mid text-sm mt-1">Andreas Boutiques opened its first atelier with a focus on bespoke bridal wear.</p>
+                        </div>
+                        <div class="absolute left-0 md:left-1/2 w-4 h-4 rounded-full bg-pink border-2 border-white shadow -translate-x-1/2 mt-1.5 md:mt-0"></div>
+                        <div class="md:w-1/2 md:pl-12 hidden md:block"></div>
+                    </li>
+                    <li class="relative flex flex-col md:flex-row md:items-center gap-4 md:gap-8 pl-8 md:pl-0">
+                        <div class="md:w-1/2 md:pr-12 hidden md:block"></div>
+                        <div class="absolute left-0 md:left-1/2 w-4 h-4 rounded-full bg-pink border-2 border-white shadow -translate-x-1/2 mt-1.5 md:mt-0"></div>
+                        <div class="md:w-1/2 md:pl-12 md:text-left">
+                            <span class="font-serif text-xl text-pink">2015</span>
+                            <p class="text-gray-mid text-sm mt-1">Expanded into evening wear and launched our first ready-to-wear collection.</p>
+                        </div>
+                    </li>
+                    <li class="relative flex flex-col md:flex-row md:items-center gap-4 md:gap-8 pl-8 md:pl-0">
+                        <div class="md:w-1/2 md:pr-12 md:text-right">
+                            <span class="font-serif text-xl text-pink">2018</span>
+                            <p class="text-gray-mid text-sm mt-1">Moved to our current flagship store and introduced personal fitting appointments.</p>
+                        </div>
+                        <div class="absolute left-0 md:left-1/2 w-4 h-4 rounded-full bg-pink border-2 border-white shadow -translate-x-1/2 mt-1.5 md:mt-0"></div>
+                        <div class="md:w-1/2 md:pl-12 hidden md:block"></div>
+                    </li>
+                    <li class="relative flex flex-col md:flex-row md:items-center gap-4 md:gap-8 pl-8 md:pl-0">
+                        <div class="md:w-1/2 md:pr-12 hidden md:block"></div>
+                        <div class="absolute left-0 md:left-1/2 w-4 h-4 rounded-full bg-pink border-2 border-white shadow -translate-x-1/2 mt-1.5 md:mt-0"></div>
+                        <div class="md:w-1/2 md:pl-12 md:text-left">
+                            <span class="font-serif text-xl text-pink">2022</span>
+                            <p class="text-gray-mid text-sm mt-1">Launched online boutique and nationwide shipping for select collections.</p>
+                        </div>
+                    </li>
+                    <li class="relative flex flex-col md:flex-row md:items-center gap-4 md:gap-8 pl-8 md:pl-0">
+                        <div class="md:w-1/2 md:pr-12 md:text-right">
+                            <span class="font-serif text-xl text-pink">2025</span>
+                            <p class="text-gray-mid text-sm mt-1">Today we continue to craft timeless pieces for weddings and special occasions.</p>
+                        </div>
+                        <div class="absolute left-0 md:left-1/2 w-4 h-4 rounded-full bg-pink border-2 border-white shadow -translate-x-1/2 mt-1.5 md:mt-0"></div>
+                        <div class="md:w-1/2 md:pl-12 hidden md:block"></div>
+                    </li>
+                </ul>
+            </div>
         </div>
     </main>
 
-    <footer class="py-12 px-6 border-t border-pink/20 bg-white">
-        <div class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-center gap-6">
+    <footer class="py-10 sm:py-12 px-4 sm:px-6 border-t border-pink/20 bg-white">
+        <div class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-center gap-4 sm:gap-6 text-center md:text-left">
             <a href="index.html" class="flex items-center gap-2 text-gray-dark hover:text-pink transition-colors">
                 <span class="w-8 h-8 text-pink flex-shrink-0"><svg viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-full h-full"><circle cx="20" cy="20" r="18" stroke="currentColor" stroke-width="1.5" fill="none"/><path d="M20 11 L12 29 M20 11 L28 29 M14 20 L26 20" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg></span>
                 <span class="font-serif text-xl tracking-wide">Andreas Boutiques</span>
